--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "packageManager": "pnpm@9.9.0+sha256.7a4261e50d9a44d9240baf6c9d6e10089dcf0a79d0007f2a26985a6927324177",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "nx next:dev",
+    "build": "nx next:build",
+    "start": "nx next:start",
     "test": "pnpm lint",
     "lint": "next lint",
     "pages:build": "pnpm dlx @cloudflare/next-on-pages@1",
@@ -20,6 +20,7 @@
     "@ipld/dag-json": "^10.2.2",
     "@ipld/dag-ucan": "^3.4.0",
     "@sentry/nextjs": "8.35.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "@ucanto/client": "^9.0.1",
     "@ucanto/core": "^10.0.1",
     "@ucanto/interface": "^10.0.1",
