fix(console): pnpm run dev + nx configs(sentry,tailwind)

--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "w3console",
+  "name": "@storacha/console",
   "version": "1.17.6",
   "private": true,
   "packageManager": "pnpm@9.9.0+sha256.7a4261e50d9a44d9240baf6c9d6e10089dcf0a79d0007f2a26985a6927324177",
   "scripts": {
     "dev": "nx next:dev",
     "build": "nx next:build",
-    "start": "nx next:start",
+    "build:fresh": "nx next:build --skip-nx-cache",
+    "start": "nx next:start --configuration=production",
     "test": "pnpm lint",
     "lint": "next lint",
     "pages:build": "pnpm dlx @cloudflare/next-on-pages@1",
@@ -40,8 +41,8 @@
     "next": "^13.5.4",
     "nft.storage": "^7.1.1",
     "p-retry": "^6.2.0",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-tooltip": "^5.28.0",
@@ -52,16 +53,16 @@
     "@cloudflare/next-on-pages": "^1.6.3",
     "@types/archy": "^0.0.36",
     "@types/blueimp-md5": "^2.18.0",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "latest",
+    "@types/node": "^18.19.75",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-next-on-pages": "1.6.3",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.3.3",
     "vercel": "33.2.0",
     "wrangler": "^3.11.0"
   }
