--- a/packages/access-client/tsconfig.lib.json
+++ b/packages/access-client/tsconfig.lib.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src"],
+  "include": ["src/**/*"],
   "references": [
     {
       "path": "../did-mailto/tsconfig.lib.json"
