--- a/packages/ui/examples/react/multi-file-upload/tsconfig.app.json
+++ b/packages/ui/examples/react/multi-file-upload/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src"],
+  "include": ["src/**/*"],
   "references": [
     {
       "path": "../../../packages/react/tsconfig.lib.json"
