--- a/packages/ui/packages/core/tsconfig.lib.json
+++ b/packages/ui/packages/core/tsconfig.lib.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src"],
+  "include": ["src/**/*"],
   "references": [
     {
       "path": "../../../w3up-client/tsconfig.lib.json"
