--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,47 @@
 name: Release
-env:
-  CI: true
-  FORCE_COLOR: 1
+
 on:
   push:
     branches:
       - main
+
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   release:
+    name: Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-    outputs:
-      paths_released: ${{ steps.release.outputs.paths_released }}
     steps:
-      - uses: googleapis/release-please-action@v4
-        id: release
+      - uses: actions/checkout@v4
         with:
-          config-file: .github/release-please-config.json
-          manifest-file: .github/release-please-manifest.json
-  npm:
-    needs: release
-    if: |
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/access-client') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/blob-index') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/capabilities') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/cli') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/did-mailto') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/upload-client') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/upload-api') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/filecoin-client') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/filecoin-api') ||
-      contains(fromJson(needs.release.outputs.paths_released), 'packages/w3up-client')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+          fetch-depth: 0
       - uses: pnpm/action-setup@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org'
           cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm -r publish --access=public
+      - name: Install npm package dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Prepare .npmrc
+        run: |
+          cat <<'EOF' >.npmrc
+          # Auth with the set token.
+          //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+          registry=https://registry.npmjs.org/
+          always-auth=true
+          EOF
+
+      - name: Update Release PR or Release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
+          MAIN_BRANCH_NAME: ${{ github.event.repository.default_branch }}
+          COMMIT_BEFORE: ${{ github.event.before }}
+          RELEASE_BRANCH_NAME: release
+          LOGLEVEL: ${{ runner.debug && 'debug' || '' }}
+        run: pnpm tsx ./.github/release/release.ts
