--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "packageManager": "pnpm@10.1.0+sha512.c89847b0667ddab50396bbbd008a2a43cf3b581efd59cf5d9aa8923ea1fb4b8106c041d540d08acb095037594d73ebc51e1ec89ee40c88b30b8a66c0fae0ac1b",
   "scripts": {},
   "devDependencies": {
+    "@nx/devkit": "^20.4.6",
     "@nx/js": "catalog:",
+    "@types/npm-registry-fetch": "^8.0.7",
+    "depcheck": "catalog:",
+    "eslint": "catalog:",
     "lint-staged": "catalog:",
+    "loglevel": "^1.9.2",
+    "npm-registry-fetch": "^18.0.2",
     "nx": "catalog:",
+    "octokit": "^4.1.2",
     "prettier": "2.8.3",
     "react": "catalog:",
-    "typescript": "catalog:",
-    "depcheck": "catalog:",
-    "eslint": "catalog:"
+    "simple-git": "^3.27.0",
+    "tsx": "^4.19.3",
+    "typescript": "catalog:"
   },
   "engines": {
     "node": ">=16"
