Don't run `prettier` from `lint` tasks.
Use `nx format:check` & `nx format:write` instead.

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {},
   "devDependencies": {
     "@nx/js": "catalog:",
+    "depcheck": "catalog:",
+    "eslint": "catalog:",
     "lint-staged": "catalog:",
     "nx": "catalog:",
-    "prettier": "2.8.3",
+    "prettier": "3.5.3",
     "react": "catalog:",
-    "typescript": "catalog:",
-    "depcheck": "catalog:",
-    "eslint": "catalog:"
+    "typescript": "catalog:"
   },
   "engines": {
     "node": ">=16"
