--- a/packages/blob-index/package.json
+++ b/packages/blob-index/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "dev": "tsc --build --watch --preserveWatchOutput",
     "clean": "rm -rf dist *.tsbuildinfo coverage",
-    "lint": "eslint '**/*.{js,ts}' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
-    "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
+    "lint": "eslint '**/*.{js,ts}'",
+    "lint:fix": "eslint --fix '**/*.{js,ts}'",
     "test": "entail test/*.spec.js",
     "attw": "attw --profile esm-only --pack .",
     "coverage": "c8 --reporter text --reporter html npm run test"
