--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: pnpm nx affected -t prepare-environment
 
       - name: Check format
-        run: pnpm nx format:check
+        run: pnpm nx format:check --all
 
       # Run CI tasks over all affected projects
       # TODO: Add `attw` back once fixed.
