--- a/packages/eslint-config-w3up/package.json
+++ b/packages/eslint-config-w3up/package.json
@@ -12,7 +12,7 @@
   "main": "./src/index.js",
   "scripts": {
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "eslint '**/*.{js,ts}' && prettier --check '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
+    "lint": "eslint '**/*.{js,ts}'",
     "lint:fix": "eslint --fix '**/*.{js,ts}' && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore"
   },
   "author": "",
