--- a/packages/ui/examples/react/sign-up-in/package.json
+++ b/packages/ui/examples/react/sign-up-in/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "start": "vite preview",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "eslint '**/*.{js,jsx,ts,tsx}' && prettier --check '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../../.gitignore",
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}' && prettier --write '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../../.gitignore"
   },
   "dependencies": {
