--- a/packages/ui/packages/eslint-config/package.json
+++ b/packages/ui/packages/eslint-config/package.json
@@ -2,10 +2,12 @@
   "name": "@storacha/ui-eslint-config",
   "private": true,
   "files": [
-    "eslint.packages.js"
+    "index.js"
   ],
+  "main": "index.js",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
     "hd-scripts": "catalog:"
   }
 }
