--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@ipld/dag-ucan": "^3.2.0",
+    "@storacha/ui-eslint-config": "workspace:^",
     "@testing-library/react": "catalog:",
     "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
@@ -54,12 +55,6 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@storacha/ui-eslint-config",
-      "plugin:react-hooks/recommended"
-    ]
   },
   "eslintIgnore": [
     "node_modules",
