--- a/packages/ui/examples/react/file-upload/tsconfig.json
+++ b/packages/ui/examples/react/file-upload/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "allowImportingTsExtensions": true,
-    "noEmit": true
+    "emitDeclarationOnly": true
   },
   "references": [
     {
