--- a/packages/ui/examples/react/uploads-list/package.json
+++ b/packages/ui/examples/react/uploads-list/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "start": "vite preview",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "echo 'Linting in @storacha/ui-example-react-uploads-list is temporarily disabled while we resolve version issues.'",
-    "lint:fix": "echo 'Linting in @storacha/ui-example-react-uploads-list is temporarily disabled while we resolve version issues.'"
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}' && prettier --check '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../../.gitignore",
+    "lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}' && prettier --write '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../../.gitignore"
   },
   "dependencies": {
     "@heroicons/react": "catalog:",
@@ -34,7 +34,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "../../../eslint.packages.js"
+      "@storacha/ui"
     ]
   }
 }
