--- a/packages/ui/packages/eslint-config/package.json
+++ b/packages/ui/packages/eslint-config/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@storacha/ui-eslint-config",
+  "name": "@storacha/eslint-config-ui",
   "private": true,
   "files": [
     "eslint.packages.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "catalog:",
     "hd-scripts": "catalog:"
   }
 }
