--- a/packages/ui/packages/core/package.json
+++ b/packages/ui/packages/core/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@ipld/dag-ucan": "^3.4.0",
     "@ucanto/client": "catalog:",
-    "@ucanto/interface": "^10.0.1",
+    "@ucanto/interface": "catalog:",
     "@ucanto/principal": "^9.0.1",
     "@ucanto/transport": "catalog:",
     "@storacha/access": "workspace:^",
