--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -40,7 +40,7 @@
     "@testing-library/user-event": "catalog:",
     "@types/react": "catalog:",
     "@ucanto/client": "catalog:",
-    "@ucanto/interface": "^10.0.1",
+    "@ucanto/interface": "catalog:",
     "@ucanto/principal": "^9.0.1",
     "@ucanto/transport": "catalog:",
     "bunchee": "catalog:",
