--- a/packages/upload-client/package.json
+++ b/packages/upload-client/package.json
@@ -73,7 +73,7 @@
     "@types/varint": "catalog:",
     "@typescript-eslint/eslint-plugin": "catalog:",
     "@ucanto/principal": "^9.0.2",
-    "@ucanto/server": "^10.2.0",
+    "@ucanto/server": "catalog:",
     "@web3-storage/content-claims": "^5.1.3",
     "assert": "catalog:",
     "blockstore-core": "catalog:",
