--- a/packages/capabilities/package.json
+++ b/packages/capabilities/package.json
@@ -83,7 +83,7 @@
   ],
   "dependencies": {
     "@ucanto/core": "catalog:",
-    "@ucanto/interface": "^10.1.1",
+    "@ucanto/interface": "catalog:",
     "@ucanto/principal": "^9.0.2",
     "@ucanto/transport": "catalog:",
     "@ucanto/validator": "catalog:",
