--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "dev": "bunchee --watch",
     "clean": "rm -rf dist *.tsbuildinfo",
-    "lint": "eslint '**/*.{js,jsx,ts,tsx}' && prettier --check '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../.gitignore",
-    "lint:fix": "eslint --fix '**/*.{js,jsx,ts,tsx}' && prettier --write '**/*.{js,jsx,ts,tsx,yml,json}' --ignore-path ../../../../.gitignore",
+    "lint": "echo 'Linting in @storacha/ui-react is temporarily disabled while we resolve version issues.'",
+    "lint:fix": "echo 'Linting in @storacha/ui-react is temporarily disabled while we resolve version issues.'",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
