--- a/packages/capabilities/package.json
+++ b/packages/capabilities/package.json
@@ -84,7 +84,7 @@
   "dependencies": {
     "@ucanto/core": "catalog:",
     "@ucanto/interface": "catalog:",
-    "@ucanto/principal": "^9.0.2",
+    "@ucanto/principal": "catalog:",
     "@ucanto/transport": "catalog:",
     "@ucanto/validator": "catalog:",
     "@web3-storage/data-segment": "^5.2.0",
