--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -41,7 +41,7 @@
     "@types/react": "catalog:",
     "@ucanto/client": "catalog:",
     "@ucanto/interface": "catalog:",
-    "@ucanto/principal": "^9.0.1",
+    "@ucanto/principal": "catalog:",
     "@ucanto/transport": "catalog:",
     "bunchee": "catalog:",
     "eslint-plugin-react-hooks": "catalog:",
