--- a/packages/filecoin-client/package.json
+++ b/packages/filecoin-client/package.json
@@ -50,7 +50,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "catalog:",
-    "@ucanto/principal": "^9.0.2",
+    "@ucanto/principal": "catalog:",
     "@ucanto/server": "catalog:",
     "@web3-storage/data-segment": "^5.3.0",
     "assert": "catalog:",
