--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -130,7 +130,7 @@
     "@ucanto/client": "catalog:",
     "@ucanto/core": "catalog:",
     "@ucanto/interface": "catalog:",
-    "@ucanto/principal": "^9.0.2",
+    "@ucanto/principal": "catalog:",
     "@ucanto/transport": "catalog:"
   },
   "devDependencies": {
