--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,6 +28,7 @@ catalog:
   '@ucanto/client': ^9.0.1
   '@ucanto/core': ^10.3.1
   '@ucanto/interface': '^10.2.0'
+  '@ucanto/principal': '^9.0.2'
   '@ucanto/server': '^10.2.0'
   '@ucanto/transport': ^9.1.1
   '@ucanto/validator': ^9.1.0
