--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,7 +45,7 @@
     "@web-std/blob": "catalog:",
     "@web3-storage/sigv4": "catalog:",
     "entail": "^2.1.1",
-    "multiformats": "^13.1.1",
+    "multiformats": "catalog:",
     "prettier": "^3.0.3",
     "typescript": "catalog:"
   },
