--- a/packages/access-client/package.json
+++ b/packages/access-client/package.json
@@ -81,7 +81,7 @@
     "@ucanto/validator": "catalog:",
     "bigint-mod-arith": "catalog:",
     "conf": "catalog:",
-    "multiformats": "^13.3.1",
+    "multiformats": "catalog:",
     "p-defer": "catalog:",
     "type-fest": "^4.9.0",
     "uint8arrays": "^5.1.0"
