--- a/packages/filecoin-api/package.json
+++ b/packages/filecoin-api/package.json
@@ -119,7 +119,7 @@
     "@web-std/blob": "catalog:",
     "c8": "^10.1.2",
     "mocha": "^10.2.0",
-    "multiformats": "^13.3.1",
+    "multiformats": "catalog:",
     "p-wait-for": "catalog:",
     "typescript": "catalog:"
   },
