--- a/packages/filecoin-client/package.json
+++ b/packages/filecoin-client/package.json
@@ -57,7 +57,7 @@
     "c8": "^7.13.0",
     "hundreds": "catalog:",
     "mocha": "^10.2.0",
-    "multiformats": "^13.3.1",
+    "multiformats": "catalog:",
     "playwright-test": "catalog:",
     "typescript": "catalog:"
   },
