--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -152,7 +152,7 @@
     "c8": "^7.13.0",
     "hundreds": "catalog:",
     "mocha": "^10.8.2",
-    "multiformats": "^13.3.1",
+    "multiformats": "catalog:",
     "npm-run-all": "catalog:",
     "playwright-test": "catalog:",
     "typescript": "catalog:"
