--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -65,6 +65,7 @@ catalog:
   is-subset: ^0.1.1
   jsdom: ^23.0.1
   lint-staged: ^13.2.0
+  multiformats: ^13.3.2
   npm-run-all: ^4.1.5
   nx: 20.3.2
   open: ^9.1.0
