--- a/scripts/package.json
+++ b/scripts/package.json
@@ -10,6 +10,6 @@
     "@ucanto/core": "^10.0.1",
     "@ucanto/interface": "catalog:",
     "@ucanto/principal": "^9.0.1",
-    "multiformats": "^13.3.1"
+    "multiformats": "catalog:"
   }
 }
