--- a/packages/ui/packages/react/package.json
+++ b/packages/ui/packages/react/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/ui-react",
   "version": "2.5.12",
   "description": "React adapter for w3ui.",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
