--- a/packages/capabilities/package.json
+++ b/packages/capabilities/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/capabilities",
   "version": "1.2.4",
   "description": "UCAN Capabilities provided by storacha.network",
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://storacha.network",
   "repository": {
     "type": "git",
