--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,9 @@
   "version": "1.1.14",
   "license": "Apache-2.0 OR MIT",
   "description": "Command Line Interface to the Storacha Network",
+  "publishConfig": {
+    "access": "public"
+  },
   "bin": {
     "storacha": "bin.js"
   },
