--- a/packages/filecoin-client/package.json
+++ b/packages/filecoin-client/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/filecoin-client",
   "version": "1.0.4",
   "description": "The w3filecoin client for storacha.network",
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://storacha.network",
   "repository": {
     "type": "git",
