--- a/packages/ui/packages/core/package.json
+++ b/packages/ui/packages/core/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/ui-core",
   "version": "2.4.17",
   "description": "w3ui core.",
+  "publishConfig": {
+    "access": "public"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.esm.js",
