--- a/packages/upload-client/package.json
+++ b/packages/upload-client/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/upload-client",
   "version": "1.0.7",
   "description": "The storacha.network upload client",
+  "publishConfig": {
+    "access": "public"
+  },
   "homepage": "https://storacha.network",
   "repository": {
     "type": "git",
