--- a/packages/w3up-client/package.json
+++ b/packages/w3up-client/package.json
@@ -2,6 +2,9 @@
   "name": "@storacha/client",
   "version": "1.1.9",
   "description": "Client for the storacha.network w3up api",
+  "publishConfig": {
+    "access": "public"
+  },
   "license": "Apache-2.0 OR MIT",
   "type": "module",
   "main": "dist/index.js",
