--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -5,6 +5,9 @@
     "license": "Apache-2.0 OR MIT",
     "description": "Client for upload and download encrypted files",
     "author": "Storacha",
+    "publishConfig": {
+        "access": "public"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/storacha/upload-service.git",
@@ -104,6 +107,17 @@
             "coverage",
             "src/types.js",
             "*.min.js"
+        ]
+    },
+    "depcheck": {
+        "ignorePatterns": [
+            "dist"
+        ],
+        "ignores": [
+            "@typescript-eslint/eslint-plugin",
+            "@typescript-eslint/parser",
+            "assert",
+            "c8"
         ]
     },
     "engines": {
