--- a/packages/encrypt-upload-client/tsconfig.json
+++ b/packages/encrypt-upload-client/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "outDir": "./dist",    // fix`
+    "rootDir": "./src"     // fix`
+  },
   "files": [],
   "references": [
     {
@@ -20,5 +24,6 @@
     {
       "path": "../eslint-config-w3up"
     }
-  ]
+  ],
+  "exclude": ["./dist"]
 }
